Fixed sizing of portfolio banner for text on mobile

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -199,7 +199,7 @@
   background-image: url("/images/portfolio/empowerhack/eh-2.jpg");
   background-attachment: fixed;
   min-height: 60vh;
-  
+
   h2, p { color: $actual-white; }
 }
 
@@ -212,6 +212,7 @@
   background-attachment: fixed;
   color: $actual-white;
   text-shadow: 0px 1px 5px $black;
+  overflow: auto;
 
   &:before {
     content: '';
